--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "@actions/artifact": "^0.5.1",
     "@actions/core": "^1.2.6",
+    "@actions/github": "^2.0.0",
     "@actions/glob": "^0.1.0",
     "@actions/io": "^1.0.2",
+    "@octokit/plugin-retry": "^3.0.2",
+    "@octokit/plugin-throttling": "^3.2.1",
+    "mime": "^2.4.4",
     "upload-artifact": "github:actions/upload-artifact"
   },
   "devDependencies": {
