--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts",
     "build": "tsc",
     "release": "ncc build src/main.ts"
   },
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@vercel/ncc": "^0.28.3",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^3.7.4",
     "typescript-formatter": "^7.2.2"
