--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "build": "tsc",
-    "release": "ncc build src/main.ts"
+    "release": "ncc build -s src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/artifact": "^0.5.1",
+    "@actions/artifact": "^1.1.1",
     "@actions/core": "^1.2.7",
-    "@actions/github": "^2.0.0",
-    "@actions/glob": "^0.1.1",
+    "@actions/github": "^5.1.1",
+    "@actions/glob": "^0.3.0",
     "@actions/io": "^1.1.0",
-    "mime": "^2.5.2"
+    "mime": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^15.0.1",
-    "@vercel/ncc": "^0.28.3",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^16.11.7",
+    "@vercel/ncc": "^0.36.0",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.2.4",
     "typescript-formatter": "^7.2.2"
   }
