--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,22 @@ inputs:
     description: Whether to upload files to release.
     default: 'false'
     required: false
+  retry-limit:
+    description: >
+      Number of times to retry uploading a file if it fails.
+
+      Minimum 0.
+      Maximum 10.
+    default: '3'
+    required: false
+  retry-interval:
+    description: >
+      Number of seconds to wait between upload attempts.
+
+      Minimum 1.
+      Maximum 10.
+    default: '3'
+    required: false
 runs:
   using: 'node16'
   main: 'dist/index.js'
